--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo_container">
-            <a href="#"><img class="myntra_home" src="/Myntra clone css/images/myntra_logo.webp" alt="Myntra logo"></a>
+            <a href="#"><img class="myntra_home" src="images/myntra_logo.webp" alt="Myntra logo"></a>
         </div>
         <nav>
             <div class="nav_bar">
@@ -46,7 +46,7 @@
     </header>
     <main>
         <div class="banner_container">
-            <img class="banner_pic" src="/Myntra clone css/images/banner.jpg" alt="banner">
+            <img class="banner_pic" src="images/banner.jpg" alt="banner">
         </div>
         <div class="category_heading">MEDAL WORTHY BRANDS TO BAG</div>
         <div class="offer_container">
@@ -66,16 +66,16 @@
         
         <div class="category_heading">SHOP BY CATEGORY</div>
         <div class="offer_container">
-            <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/1.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/2.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/3.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/4.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/5.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/6.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/7.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/8.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/9.jpg" alt=""></a>
-             <a href="#"><img class="offer_item" src="/Myntra clone css/images/categories/10.jpg" alt=""></a>
+            <a href="#"><img class="offer_item" src="images/categories/1.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/2.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/3.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/4.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/5.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/6.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/7.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/8.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/9.jpg" alt=""></a>
+             <a href="#"><img class="offer_item" src="images/categories/10.jpg" alt=""></a>
         </div>
     </main>
     <footer>
